FIXES - overflow issue with mobile menu

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -1,3 +1,7 @@
+html, body {
+	overflow-x: hidden;
+}
+
 address {
 	font-style: normal;
 }
